<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/travel_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_txt"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/text_background"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
    
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:layout_gravity="center_vertical"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:gravity="center"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:padding="2dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="center"
            android:inputType="textNoSuggestions"
            android:hint="@string/name_text" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:padding="2dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:padding="2dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pasword_text"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/telephone_editText"
            android:layout_width="match_parent"
            android:padding="2dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="center"
            android:inputType="textNoSuggestions"
            android:hint="@string/telephone_txt" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onOkBtnClick"
			android:background="@drawable/loginok_button_selector"/>
    </LinearLayout>
    </ScrollView>

</LinearLayout>