<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/imageView1"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/travel_txt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/welcom_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginRight="40dp"
        android:layout_marginTop="4dp"
        android:singleLine="false"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_background"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trave_diary_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/memory_layout"
        android:layout_below="@+id/LinearLayout1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tour_title"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tour_title"
            android:textColor="@android:color/black" >
        </TextView>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:padding="2dp" >
        </EditText>

        <TextView
            android:id="@+id/tour_desc"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tour_desc"
            android:textColor="@android:color/black" >
        </TextView>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textNoSuggestions|textMultiLine"
            android:padding="2dp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/memory_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layout"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/photo_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/camera_button_selector"
            android:gravity="center"
            android:onClick="onClick" />

        <Button
            android:id="@+id/video_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/video_button_selector"
            android:gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/calendar_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/calendar_button_selector"
            android:gravity="center"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Medium Text"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/save" />

        <Button
            android:id="@+id/delete_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancel_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>