<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/travel_txt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_background"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_city_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" >

        <EditText
            android:id="@+id/editText1"
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:textSize="15sp" >
        </EditText>

        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="@drawable/ok_button_selector"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/added_city_text"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/city_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/back_button"
        android:layout_below="@+id/textView4"
        android:layout_margin="8dp"
        android:background="@drawable/rectangletextborder" >
    </ListView>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:onClick="onClick"
        android:background="@drawable/back_button_selector"/>

</RelativeLayout>